--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+*.apk
+app/release/output.json
+app/release/output.json
+app/build.gradle
+app/build.gradle
